autotests/syntax-tests/tests/negative/negative184.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name Name ; ( [ Name ] Name ) Name = ; [ Name e.Var ( # Name Name ) Name ] Name = { e.Var = ( ) { # Name Name = [ Name ] ( e.Var ) [ Name # Name ] e.Var # Name 'chars' 123 < 'chars' > : 'chars' Name = 123 Name $LABEL ; = ; } Name : = ; = ; } Name : = ; = ; } ; 